Public: События GET /events Получение событий с возможностью фильтрации GET /events/{id} Получение подробной информации об опубликованном событии по его идентификатору
Смена версии родительского Spring Parent в Pom

ErrorHandler status fix's, изменил статусы ошибок согласно их реальным ответам